Segunda versão site

--- a/CMD.html
+++ b/CMD.html
@@ -8,25 +8,30 @@
 <body>
     <nav>
         <a href="index.html">Sistema operacional</a>
-        <a href="linux.html">Exemplos de sistemas operacionais</a>
+        <a href="system.html">Exemplos de sistemas operacionais</a>
+        <a href="linux.html">O que é Interfae CLI e GUI</a>
         <a href="GitBash.html">Comandos GitBash</a>
         <a href="CMD.html">Comandos no CMD</a>
         <a href="sistema.html">sistema de versionamento</a>
+        <a href="repositorio.html">Repositório</a>
+        <a href="Deploy.html">Deploy</a>
     </nav>
     <h1>Comandos do sistema operacional</h1>
     <main>
+        <h2>DIR</h2>
         <article>
-            CD - (change dir) muda a pasta de direcionamento
+            dir - listar arquivos e pastas
         </article>
-        <article>
-            echo - usado para adicionar um texto
-        </article>
-        <article>> - é usado para criar  o conteúdo do arquivo na tela</article>
-        <article>type - usado para exibir o conteúdo de um arquivo texto no console</article>
-        <article>dir - listar arquivos e pastas</article>
-        <article>/B - lista apenas o nome dos arquivos e pastas</article>
-        <article>/T:W - usado para especificar nome data e hora</article>
+        <img src="DIR.png" alt="">
+        <h3>CD</h3>
+        <article>CD - (change dir) muda a pasta de direcionamento</article>
+        <img src="CD.png" alt="">
+
     </main>
+    <footer>
+        <hr>
+        <small>Lucas Wagner Salim &reg; &trade;</small>
+        </footer>
     
 </body>
 </html>
