--- a/linux.html
+++ b/linux.html
@@ -10,10 +10,13 @@
     <header>
         <nav>
             <a href="index.html">Sistema operacional</a>
+            <a href="system.html">Exemplos de sistemas operacionais</a>
             <a href="linux.html">O que é Interfae CLI e GUI</a>
             <a href="GitBash.html">Comandos GitBash</a>
             <a href="CMD.html">Comandos no CMD</a>
             <a href="sistema.html">sistema de versionamento</a>
+            <a href="repositorio.html">Repositório</a>
+            <a href="Deploy.html">Deploy</a>
         </nav>
     </header>
     <main>
